--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -1,8 +1,8 @@
 /* ===== NAVIGATION ===== */
 .navbar {
-        width: fit-content;
+    width: fit-content;
     position: fixed;
-    top: 16px;
+    top: 1vh;
     left: 50%;
     transform: translateX(-50%);
     z-index: 1000;
@@ -45,16 +45,14 @@ a {
 
 .navBtn.active {
   color: white;
-  border-left: 3px solid #1492E6;
-  border-right: 3px solid #1492E6;
-  background: linear-gradient(180deg, #51B9FF 0%, #007CF0 100%);
+  background: rgba(255, 255, 255, 0.75);
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
   min-width: 80px;
 }
 
 .navBtn:hover {
     border-radius: 10px;
-    background: #686868;
+    background: rgba(255, 255, 255, 0.25);
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
     color: white;
 }
