finally got jekyll working locallyyyyy

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,5 @@
 <head>
-    <link rel="stylesheet" href="/webdesign2/src/css/nav.css">
+    <link rel="stylesheet" href="/src/css/nav.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined&display=block"/>
 </head>
 
