--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" href="/webdesign2/src/css/global.css">
+    <link rel="stylesheet" href="/src/css/global.css">
     <title>Just Another Portfolio</title>
 </head>
 
