--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1,7 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 body {
     background-color: #1a1a1a;
-    margin-left: 2vw;
-    margin-right: 2vh;
+    margin-left: 5vw;
+    margin-right: 5vw;
+}
+
+main {
+    margin-top: 5em;
+}
+
+.content {
+    min-height: 100px;
+    padding: 10px;
+    border-radius: 15px;
+    background-color: #282828;
+}
+
+p {
+    color: white;
+    font-family: "DM Sans";
+    font-size: 17px;
 }
