--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -44,10 +44,10 @@ a {
 }
 
 .navBtn.active {
-  color: white;
-  background: rgba(255, 255, 255, 0.75);
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
-  min-width: 80px;
+    border-radius: 10px;
+    background: rgba(255, 255, 255, 0.50);
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+    color: white;
 }
 
 .navBtn:hover {
