--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,13 +1,13 @@
 <head>
-    <link rel="stylesheet" href="/src/css/nav.css">
+    <link rel="stylesheet" href="./src/css/nav.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined&display=block"/>
 </head>
 
 <nav class="navbar">
     <div class="navItems">
       <a href="/"><button class="navBtn {% if page.url == '/' %}active{% endif %}"><span class="material-symbols-outlined">&#xE88A;</span></button></a>
-      <a href="/about"><button class="navBtn {% if page.url contains '/about' %}active{% endif %}"><span class="material-symbols-outlined">&#xe853;</span></button></a>
-      <a href="/contact"><button class="navBtn {% if page.url contains '/contact' %}active{% endif %}"><span class="material-symbols-outlined">&#xe158;</span></button></a>
-      <a href="/projects"><button class="navBtn {% if page.url contains '/projects' %}active{% endif %}"><span class="material-symbols-outlined">&#xeb3f;</span></button></a>
+      <a href="./about"><button class="navBtn {% if page.url contains '/about' %}active{% endif %}"><span class="material-symbols-outlined">&#xe853;</span></button></a>
+      <a href="./contact"><button class="navBtn {% if page.url contains '/contact' %}active{% endif %}"><span class="material-symbols-outlined">&#xe158;</span></button></a>
+      <a href="./projects"><button class="navBtn {% if page.url contains '/projects' %}active{% endif %}"><span class="material-symbols-outlined">&#xeb3f;</span></button></a>
     </div>
   </nav>
