added mobile ui; started about page

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,9 +5,9 @@
 
 <nav class="navbar">
     <div class="navItems">
-      <a href="./"><button class="navBtn {% if page.url == '/' %}active{% endif %}"><span class="material-symbols-outlined">&#xE88A;</span></button></a>
-      <a href="./about"><button class="navBtn {% if page.url contains '/about' %}active{% endif %}"><span class="material-symbols-outlined">&#xe853;</span></button></a>
-      <a href="./contact"><button class="navBtn {% if page.url contains '/contact' %}active{% endif %}"><span class="material-symbols-outlined">&#xe158;</span></button></a>
-      <a href="./projects"><button class="navBtn {% if page.url contains '/projects' %}active{% endif %}"><span class="material-symbols-outlined">&#xeb3f;</span></button></a>
+      <a alt="Home" href="./"><button class="navBtn {% if page.url == '/' %}active{% endif %}"><span class="material-symbols-outlined">&#xE88A;</span></button></a>
+      <a alt="About" href="./about"><button class="navBtn {% if page.url contains '/about' %}active{% endif %}"><span class="material-symbols-outlined">&#xe853;</span></button></a>
+      <a alt="Contact" href="./contact"><button class="navBtn {% if page.url contains '/contact' %}active{% endif %}"><span class="material-symbols-outlined">&#xe158;</span></button></a>
+      <a alt="Projects" href="./projects"><button class="navBtn {% if page.url contains '/projects' %}active{% endif %}"><span class="material-symbols-outlined">&#xeb3f;</span></button></a>
     </div>
   </nav>
