--- a/src/css/global.css
+++ b/src/css/global.css
@@ -19,7 +19,6 @@ main {
     padding-top: 20px;
     padding-bottom: 20px;
     border-radius: 15px;
-    background: #424242;
     background: linear-gradient(180deg,rgb(71, 71, 71) 0%, rgb(25, 25, 25) 90%);
 }
 
@@ -27,7 +26,7 @@ main {
     padding-left: 10px;
     padding-right: 10px;
     border-radius: 15px;
-    background-color: #585858;
+    background: linear-gradient(180deg,rgb(102, 102, 102) 0%, rgb(55, 55, 55) 90%);;
 }
 
 h1 {
