Finished contact.html and updated about.html

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -13,7 +13,7 @@ main {
 
 .content {
     height: fit-content;
-    min-height: 500px;
+    min-height: 750px;
     padding-left: 50px;
     padding-right: 50px;
     padding-top: 20px;
@@ -26,7 +26,7 @@ main {
     padding-left: 10px;
     padding-right: 10px;
     border-radius: 15px;
-    background: linear-gradient(180deg,rgb(102, 102, 102) 0%, rgb(55, 55, 55) 90%);;
+    background: linear-gradient(180deg,rgb(102, 102, 102) 0%, rgb(55, 55, 55) 90%);
 }
 
 h1 {
@@ -43,6 +43,12 @@ h2 {
     font-weight: 600;
 }
 
+label {
+    color: white;
+    font-family: "DM Sans";
+    font-size: 17px;
+}
+
 p {
     color: white;
     font-family: "DM Sans";
@@ -54,6 +60,16 @@ small {
     font-style: italic;
     color: #888888;
     font-size: 12px;
+}
+
+.inputField {
+    border-radius: 5px;
+    background: rgb(82, 82, 82);
+    color: white;
+    font-family: "DM Sans";
+    font-size: 13px;
+    border: none;
+    padding: 10px;
 }
 
 .uiButton {
