--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,7 +2,7 @@
     <link rel="stylesheet" href="./src/css/nav.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined&display=block"/>
 </head>
-
+<div class="navContainer">
 <nav class="navbar">
     <div class="navItems">
       <a alt="Home" href="./"><button class="navBtn {% if page.url == '/' %}active{% endif %}"><span class="material-symbols-outlined">&#xE88A;</span></button></a>
@@ -11,3 +11,17 @@
       <a alt="Projects" href="./projects"><button class="navBtn {% if page.url contains '/projects' %}active{% endif %}"><span class="material-symbols-outlined">&#xeb3f;</span></button></a>
     </div>
   </nav>
+
+<nav class="themeContainer">
+        <label class="toggle">
+          <input type="checkbox" onclick="toggleDarkLight()">
+          <span class="slider round"></span>
+        </label>
+        <script>
+          function toggleDarkLight() {
+            var element = document.body; 
+            element.classList.toggle("dark-mode"); 
+        }
+        </script>
+</nav>
+</div>
