gonna program my own buttons

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -13,8 +13,9 @@
   </nav>
 
   <nav class="themeContainer">
-    <div style="display: flex;"
-
+    <div style="display: flex; gap: 5px; justify-content: center;"
+      <button class="themeButton" onclick=""><span class="material-symbols-outlined">&#xE518;</span></button>
+      <button class="themeButton" onclick=""><span class="material-symbols-outlined">&#xE51c;</span></button>
     </div>
   </nav>
 </div>
