--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1,149 +1,191 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
+/* ===== THEME VARIABLES ===== */
+:root {
+  --body-bg: rgb(25,25,25);
+  --content-gradient-start: rgb(71, 71, 71);
+  --content-gradient-end: rgb(25, 25, 25);
+  --subcontent-gradient-start: rgb(102, 102, 102);
+  --subcontent-gradient-end: rgb(55, 55, 55);
+  --text-primary: white;
+  --text-secondary: #888888;
+  --input-bg: rgb(82, 82, 82);
+  --input-text: white;
+  --btn-bg: #3b3b3b;
+  --btn-text: white;
+  --btn-hover-bg: #cecece;
+  --btn-hover-text: black;
+  --ui-btn-bg: rgb(255, 255, 255);
+  --ui-btn-text: black;
+  --ui-btn-hover-bg: #47cf8b;
+  --ui-btn-hover-text: white;
+}
+
+body.light-theme {
+  --body-bg: #f5f5f5;
+  --content-gradient-start: #ffffff;
+  --content-gradient-end: #f5f5f5;
+  --subcontent-gradient-start: #eaeaea;
+  --subcontent-gradient-end: #eaeaea;
+  --text-primary: #000000;
+  --text-secondary: #666666;
+  --input-bg: #e0e0e0;
+  --input-text: #000000;
+  --btn-bg: #d0d0d0;
+  --btn-text: #ffffff;
+  --btn-hover-bg: #aeffd7;
+  --btn-hover-text: white;
+  --ui-btn-bg: #47cf8b;
+  --ui-btn-text: rgb(255, 255, 255);
+  --ui-btn-hover-bg: #aeffd7;
+  --ui-btn-hover-text: rgb(0, 0, 0);
+}
+
 body {
-    background-color: rgb(25,25,25);
-    margin-left: 15vw;
-    margin-right: 15vw;
+  background-color: var(--body-bg);
+  margin-left: 15vw;
+  margin-right: 15vw;
 }
 
 main {
-    margin-top: 5em;
+  margin-top: 5em;
 }
 
 .content {
-    height: fit-content;
-    min-height: 750px;
-    padding-left: 50px;
-    padding-right: 50px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    border-radius: 15px;
-    background: linear-gradient(180deg,rgb(71, 71, 71) 0%, rgb(25, 25, 25) 90%);
+  height: fit-content;
+  min-height: 750px;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-radius: 15px;
+  background: linear-gradient(180deg, var(--content-gradient-start) 0%, var(--content-gradient-end) 90%);
 }
 
 .subContent {
-    padding-bottom: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
-    border-radius: 15px;
-    background: linear-gradient(180deg,rgb(102, 102, 102) 0%, rgb(55, 55, 55) 90%);
+  padding-bottom: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  border-radius: 15px;
+  background: linear-gradient(180deg, var(--subcontent-gradient-start) 0%, var(--subcontent-gradient-end) 90%);
 }
 
 h1 {
-    font-family: "DM Sans";
-    color: white;
-    font-size: 30px;
-    font-weight: 800;
+  font-family: "DM Sans";
+  color: var(--text-primary);
+  font-size: 30px;
+  font-weight: 800;
 }
 
 h2 {
-    font-family: "DM Sans";
-    color: white;
-    font-size: 25px;
-    font-weight: 600;
+  font-family: "DM Sans";
+  color: var(--text-primary);
+  font-size: 25px;
+  font-weight: 600;
 }
 
 label {
-    color: white;
-    font-family: "DM Sans";
-    font-size: 17px;
+  color: var(--text-primary);
+  font-family: "DM Sans";
+  font-size: 17px;
 }
 
 p {
-    color: white;
-    font-family: "DM Sans";
-    font-size: 17px;
+  color: var(--text-primary);
+  font-family: "DM Sans";
+  font-size: 17px;
 }
 
 small {
-    font-family: "DM Sans";
-    font-style: italic;
-    color: #888888;
-    font-size: 12px;
+  font-family: "DM Sans";
+  font-style: italic;
+  color: var(--text-secondary);
+  font-size: 12px;
 }
 
 img {
-    border-radius: 10px;
+  border-radius: 10px;
 }
 
 .subContentBtn {
-    min-width: 50px;
-    width: fit-content;
-    padding: 5px;
-    background-color: #3b3b3b;
-    border-radius: 7px;
-    font-family: "DM Sans";
-    color: white;
-    border: none;
+  min-width: 50px;
+  width: fit-content;
+  padding: 5px;
+  background-color: var(--btn-bg);
+  border-radius: 7px;
+  font-family: "DM Sans";
+  color: var(--btn-text);
+  border: none;
 }
 
 .subContentBtn:hover {
-    background-color: #cecece;
-    color: black;
+  background-color: var(--btn-hover-bg);
+  color: var(--btn-text);
 }
 
 .subContentHeader {
-    align-items: center;
-    margin-top: 5px;
-    display: flex;
-    justify-content: space-between;
-    gap: 10px;
+  align-items: center;
+  margin-top: 5px;
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
 }
 
 .inputField {
-    border-radius: 5px;
-    background: rgb(82, 82, 82);
-    color: white;
-    font-family: "DM Sans";
-    font-size: 13px;
-    border: none;
-    padding: 10px;
+  border-radius: 5px;
+  background: var(--input-bg);
+  color: var(--input-text);
+  font-family: "DM Sans";
+  font-size: 13px;
+  border: none;
+  padding: 10px;
 }
 
 .uiButton {
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-bottom: 15px;
-    padding-top: 15px;
-    height: fit-content;
-    width: fit-content;
-    height: 50px;
-    background:  white;
-    font-family: "DM Sans";
-    font-size: 14px;
-    text-decoration: none;
-    border: none;
-    border-radius: 15px;
+    color: var(--ui-btn-text);
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-bottom: 15px;
+  padding-top: 15px;
+  height: fit-content;
+  width: fit-content;
+  height: 50px;
+  background: var(--ui-btn-bg);
+  font-family: "DM Sans";
+  font-size: 14px;
+  text-decoration: none;
+  border: none;
+  border-radius: 15px;
 }
 
 .uiButton:hover {
-    color: white !important;
-    background-color: #47cf8b;
+  color: var(--ui-btn-hover-text) !important;
+  background-color: var(--ui-btn-hover-bg);
 }
 
 .uiButton a {
-    text-align: center;
-    color: black;
+  text-align: center;
+  color: var(--ui-btn-text);
 }
 
 .flexgrid1 {
-    display: flex;
+  display: flex;
 }
 
 @media (max-width: 725px) {
-     body {
-        margin-left: 0 !important;
-        margin-right: 0 !important;
-    }
-    main {
-        margin-top: 0;
-    }
+  body {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+  }
+  main {
+    margin-top: 0;
+  }
 }
 
 @media (max-width: 850px) {
-     body {
-        margin-left: 7vw;
-        margin-right: 7vw;
-    }
+  body {
+    margin-left: 7vw;
+    margin-right: 7vw;
+  }
 }
