minor design changes

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -40,7 +40,7 @@ window.addEventListener('DOMContentLoaded', () => {
 </div>
 </nav>
 <nav class="themeContainer">
-<div style="display: flex; gap: 5px; justify-content: center;">
+<div class="slider">
 <button class="themeButton" onclick="setTheme('dark')"><span class="material-symbols-outlined">&#xE51c;</span></button>
 <button class="themeButton" onclick="setTheme('light')"><span class="material-symbols-outlined">&#xE518;</span></button>
 </div>
