--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -42,8 +42,6 @@ body.light-theme {
 
 .themeContainer {
   display: flex;
-  padding-left: 10px;
-  padding-right: 10px;
   text-align: center;
   align-items: center;
   justify-content: center;
@@ -56,6 +54,14 @@ body.light-theme {
   border: none;
   background: var(--nav-bg);
   box-shadow: 0 5px 10px 3px var(--nav-shadow);
+}
+
+.slider {
+  display: flex; 
+  gap: 5px; 
+  justify-content: center;
+  border-radius: 5px;
+  background: var(--btn-hover-bg);
 }
 
 .themeButton {
